--- a/web/customer.xhtml
+++ b/web/customer.xhtml
@@ -13,14 +13,27 @@
 </head>
 <body>
 <f:view>
-    <h:form id="Customer">
+    <h:body>
+        <f:view>
+            <h:form id="Let's order something">
 
-        <table>
-            <tr>
-            </tr>
-
-        </table>
-    </h:form>
+                <table>
+                    <tr>
+                        <td><h:outputText value="Select a restaurant whose menu you'd like to see:" /></td>
+                        <h:selectOneMenu value="#{customerBacking.userName}">
+                            <f:selectItems value="#{customerBacking.restaurants}"/>
+                        </h:selectOneMenu></td>
+                    <tr>
+                        <td />
+                        <td><h:commandButton value="Register" action="#{registerBacking.register}" /></td>
+                    </tr>
+                    <tr>
+                        <td><h:outputLink value="index.xhtml">Home</h:outputLink></td>
+                    </tr>
+                </table>
+            </h:form>
+        </f:view>
+    </h:body>
 </f:view>
 </body>
 </html>
