--- a/web/customer.xhtml
+++ b/web/customer.xhtml
@@ -15,7 +15,7 @@
         <h:form id="menus">
             <table>
                 <tr>
-                    <td><h:outputText value="Select a restaurant whose menu you'd like to see:" /></td>
+                    <td><h:outputText value="Select a restaurant:" /></td>
                     <td><h:selectOneMenu value="#{customerBacking.restaurantName}">
                         <f:selectItems value="#{customerBacking.restaurants}"/>
                     </h:selectOneMenu></td>
