--- a/web/order.xhtml
+++ b/web/order.xhtml
@@ -2,21 +2,24 @@
 <!DOCTYPE html
         PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
 <head>
     <title>Title</title>
 </head>
 <h:body>
-    <h:form id="Let's order something">
+    <h:form id="foodbuy">
         <table>
             <tr>
                 <td><h:outputText value="Would you like to order anything?" /></td>
-                <td><h:selectOneMenu value="#{customerBacking.restaurantName}">
-                    <f:selectItems value="#{customerBacking.restaurants}"/>
+                <td><h:selectOneMenu value="#{orderBacking.foodName}">
+                    <f:selectItems value="#{orderBacking.foodNames}"/>
                 </h:selectOneMenu></td>
             </tr>
             <tr>
-                <td><h:commandButton value="Inspect menu" action="#{customerBacking.order}" /></td>
+                <td><h:commandButton value="Buy" action="#{orderBacking.order}" /></td>
             </tr>
             <tr>
                 <td><h:outputText value="Nothing interesting you?" /></td>
